--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <img src="home-858736.png">
         </div>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
