--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 <h1>WHO WE ARE ?</h1>
                 <p class="text">We, The Helping Hands Foundation, a non-profit Organisation, helps children who lost
                     their family and do not have any source of income. We provide funding for their studies and
-                    survival.<br>If you want to help, you can donate <a href="home.html">here</a>.<br><span>YOUR LITTLE
+                    survival.<br>If you want to help, you can donate <a href="index.html">here</a>.<br><span>YOUR LITTLE
                         DONATION CAN BUILD A CHILD'S FUTURE!</span></p>
             </div>
         </div>
